[workspace]
members = [
    "crates/*",
    "crates/uci/uif"
]

[workspace.package]
edition = "2021"
version = "0.0.1"
publish = false
license = "Apache-2.0"
authors = ["Sachin Cherian <sachinctl@protonmail.com>"]

[workspace.dependencies]
sealion_board = { path = "crates/board" }
sealion_fen = { path = "crates/fen" }
sealion_engine = { path = "crates/engine" }
sealion_uci = { path = "crates/uci" }

# --- sealion binary ---

[package]
name = "sealion"
edition = { workspace = true }
version = { workspace = true }
publish = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[dependencies]
sealion_board = { workspace = true }
sealion_fen = { workspace = true }
sealion_engine = { workspace = true }
sealion_uci = { workspace = true }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
