[package]
name = "sealion_board"
edition = { workspace = true }
version = { workspace = true }
publish = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[dependencies]
bitflags = "1"
nom = "7"

# Macros
derive_more = { version = "0.99", features = ["add", "mul"] }
strum = { version = "0.24", features = ["derive"] }
