[package]
name = "sealion_engine"
edition = { workspace = true }
version = { workspace = true }
publish = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[dependencies]
sealion_board = { workspace = true }
smallvec = "1"

[dev-dependencies]
paste = "1"
sealion_fen = { workspace = true }

# -- Benchmarking --

[dev-dependencies.criterion]
version = "0.4"

[[bench]]
name = "movegen"
harness = false

[[bench]]
name = "state"
harness = false
