[package]
name = "sealion_fen"
edition = { workspace = true }
version = { workspace = true }
publish = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[dependencies]
nom = "7"
sealion_board = { workspace = true }

# -- Benchmarking --

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "de"
harness = false
