[package]
name = "sealion_maven"
edition = { workspace = true }
version = { workspace = true }
publish = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[dependencies]
sealion_board = { workspace = true }

# -- Benchmarking --

[dev-dependencies]
criterion = "0.4"
sealion_fen = { workspace = true }

[[bench]]
name = "movegen"
harness = false
